update prom-infra values

--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -4,10 +4,13 @@ global:
 
   # Defined via secrets.
   # region:
+  # cluster:
+  # clusterType:
 
-# Values for Infrastructure Prometheus Fronteend.
-prometheus-infra-frontend:
+# Values for Infrastructure Prometheus Frontend.
+infra-frontend-prometheus:
   name: infra-frontend
+  enabled: false
 
   retentionTime: 90d
 
