[supernova]: extend envs

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -45,6 +45,8 @@ spec:
               value: {{ .Values.auth_scope_project }}
             - name: ALERTS_API_ENDPOINT
               value: {{ .Values.alerts_api_endpoint }}
+            - name: ALERTS_UPDATE_TIMEOUT_SEC
+              value: {{ .Values.alerts_update_timeout_sec }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
