[supernova]: quote env values

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
             - name: ALERTS_API_ENDPOINT
               value: {{ .Values.alerts_api_endpoint }}
             - name: ALERTS_UPDATE_TIMEOUT_SEC
-              value: {{ .Values.alerts_update_timeout_sec }}
+              value: {{ .Values.alerts_update_timeout_sec | quote }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
