--- a/openstack/swift/templates/seeds.yaml
+++ b/openstack/swift/templates/seeds.yaml
@@ -1,4 +1,4 @@
-{{- range $index, $cluster := .Values.clusters }}
+{{- range $cluster_id, $cluster := .Values.clusters }}
 {{- if $cluster.seed }}
 # If more than one cluster has seed = true, that should fail with having
 # multiple seeds with the same name - wrong configured
