--- a/openstack/swift/templates/support_seed.yaml
+++ b/openstack/swift/templates/support_seed.yaml
@@ -1,5 +1,5 @@
 {{- $domains := list "ccadmin" "bs" "cp" "fsn" "hcm" "hcp03" "hec" "monsoon3" "s4" "wbs"}}
-{{- range $index, $cluster := .Values.clusters }}
+{{- range $cluster_id, $cluster := .Values.clusters }}
 {{- if $cluster.seed }}
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: "OpenstackSeed"
