--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -78,21 +78,21 @@ alerts:
 
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
-clusters:
-  - name: DEFINED_IN_REGION_CHART
-    # Only one cluster should seed its endpoints to keystone
-    seed: DEFINED_IN_REGION_CHART
-    endpoint_host: DEFINED_IN_REGION_CHART
-    proxy_public_ip: DEFINED_IN_REGION_CHART
-    proxy_public_port: DEFINED_IN_REGION_CHART
-    keystone_auth_uri: DEFINED_IN_REGION_CHART
-    keystone_auth_url: DEFINED_IN_REGION_CHART
-    swift_service_user: swift
-    swift_service_user_domain: Default
-    swift_service_project: service
-    swift_service_project_domain: Default
-    swift_service_password: DEFINED_IN_REGION_CHART
-    replicas: 2
+# clusters:
+#   DEFINED_IN_REGION_CHART: # cluster id
+#     # Only one cluster should seed its endpoints to keystone
+#     seed: DEFINED_IN_REGION_CHART
+#     endpoint_host: DEFINED_IN_REGION_CHART
+#     proxy_public_ip: DEFINED_IN_REGION_CHART
+#     proxy_public_port: DEFINED_IN_REGION_CHART
+#     keystone_auth_uri: DEFINED_IN_REGION_CHART
+#     keystone_auth_url: DEFINED_IN_REGION_CHART
+#     swift_service_user: swift
+#     swift_service_user_domain: Default
+#     swift_service_project: service
+#     swift_service_project_domain: Default
+#     swift_service_password: DEFINED_IN_REGION_CHART
+#     replicas: 2
 
     # The default is using the cache.swift for token caching
     # Specifing a memcached server name here will overrule that, see .Values.memcached_servers
