update prometheus-infra-frontend.scaleout dns

--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -20,7 +20,7 @@ infra-frontend-prometheus:
 
   ingress:
     enabled: true
-    host: prometheus-infra-frontend
+    host: prometheus-infra-frontend.scaleout
 
   persistence:
     enabled: true
