--- a/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
@@ -54,6 +54,12 @@ template: |
             value: neutron-nsxv3-agent-{= name =}
           - name: REQUESTS_CA_BUNDLE
             value: ""
+          livenessProbe:
+            exec:
+              command: ["openstack-agent-liveness", "--component", "neutron", "--config-file", "/etc/neutron/neutron.conf", "--config-file", "/etc/neutron/plugins/ml2/ml2-nsxv3.ini", "--binary", "neutron-nsxv3-agent"]
+            initialDelaySeconds: 30
+            periodSeconds: 30
+            timeoutSeconds: 10
           resources:
             requests:
               cpu: "64m"
