--- a/openstack/neutron/templates/network-attachment-definition.yaml
+++ b/openstack/neutron/templates/network-attachment-definition.yaml
@@ -11,6 +11,7 @@ spec:
       "type": "bridge",
       "name": "cbr1-bridge",
       "bridge": "cbr1",
+      "mtu": "{{.Values.global.default_mtu | default 9000}}",
       "ipam": { }
     }'
 {{- end }}
