--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -32,12 +32,12 @@ infra-frontend-prometheus:
   secrets:
     - prometheus-infra-frontend-sso-cert
 
-# Regional Prometheis are only accessible after presenting a valid SSO certificate.
-authentication:
-  enabled: true
-  # Defined via secrets.
-  # ssoCert:
-  # ssoKey:
+  # Collector Prometheus are only accessible after presenting a valid SSO certificate.
+  authentication:
+    enabled: true
+    # Defined via secrets.
+    # ssoCert:
+    # ssoKey:
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
