--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -8,14 +8,14 @@ global:
   # clusterType:
 
 # Values for Infrastructure Prometheus Frontend.
-infra-frontend-prometheus:
+prometheus-infra-frontend:
   name: infra-frontend
-  enabled: false
+  enabled: true
 
   retentionTime: 90d
 
   additionalScrapeConfigs:
-    name: infra-additional-scrape-config
+    name: prometheus-infra-additional-scrape-config
     key: scrape-config.yaml
 
   ingress:
@@ -30,7 +30,7 @@ infra-frontend-prometheus:
 
   # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
-    - prometheus-infra-frontend-sso-cert
+    - prometheus-infra-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
