fix prometheus-infra chart

--- a/system/prometheus-infra/templates/prometheus-infra-sso-cert.yaml
+++ b/system/prometheus-infra/templates/prometheus-infra-sso-cert.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: prometheus-infra-sso-cert
+  name: prom-infra-sso-cert
 
 data:
   sso.crt: {{ required ".Values.authentication.ssoCert missing" .Values.authentication.ssoCert | b64enc | quote }}
