[neutron] get only active agents for metrics exports

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -275,7 +275,7 @@ pgmetrics:
             usage: "GAUGE"
             description: "Estimate on number of filter rules"
     openstack_neutron_monitor_agents:
-      query: "SELECT host, agent_type, load, EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) as heartbeat_seconds FROM agents WHERE admin_state_up"
+      query: "SELECT host, agent_type, load, EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) as heartbeat_seconds FROM agents WHERE admin_state_up and EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) < 90"
       metrics:
         - host:
             usage: "LABEL"
