add missing sentry values for glance nanny

--- a/openstack/nannies/values.yaml
+++ b/openstack/nannies/values.yaml
@@ -194,3 +194,7 @@ alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
+
+# currently used by glance nanny only
+sentry:
+  enabled: true
