change prometheus-infra config

--- a/system/prometheus-infra/values.yaml
+++ b/system/prometheus-infra/values.yaml
@@ -15,7 +15,7 @@ prometheus-infra-frontend:
   retentionTime: 90d
 
   additionalScrapeConfigs:
-    name: prom-infra-additional-scrape-config
+    name: prometheus-infra-frontend-additional-scrape-config
     key: scrape-config.yaml
 
   ingress:
@@ -30,7 +30,7 @@ prometheus-infra-frontend:
 
   # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
-    - prom-infra-sso-cert
+    - prometheus-infra-frontend-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
