[nannies] proper namespace name for glance nanny

--- a/openstack/nannies/templates/glance-nanny-deployment.yaml
+++ b/openstack/nannies/templates/glance-nanny-deployment.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
 {{- if .Values.glance_nanny.db_purge.enabled }}
         - name: db-consistency-and-purge
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/glance-nanny:{{ .Values.glance_nanny.image_version }}
+          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/glance-nanny:{{ .Values.glance_nanny.image_version }}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
