[keystone] added support for a stein release deployment

--- a/openstack/keystone/templates/configmap-etc.yaml
+++ b/openstack/keystone/templates/configmap-etc.yaml
@@ -45,3 +45,7 @@ data:
       glob_disable_ordering: false
       ttl: 0 # metrics do not expire
 {{- end }}
+{{- if eq .Values.release "stein" }}
+  access_rules.json: |
+{{ include (print .Template.BasePath "/etc/_access_rules.json.tpl") . | indent 4 }}
+{{- end }}
