update infra-monitoring values

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -1,5 +1,12 @@
 global:
   imageRegistry: hub.global.cloud.sap
+  domain: cloud.sap
+
+  # Defined via secrets.
+  # region:
+  # cluster:
+  # clusterType:
+
   altas:
      ironic:
        enabled: false
