--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -1,66 +1,30 @@
 dependencies:
   - name: prometheus-server
-    alias: prometheus_server
+    alias: prometheus_infra_collector
     repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.18
-    condition: prometheus_server.enabled
+    condition: prometheus_infra_collector.enabled
 
   - name: cloudprober-exporter
+    alias: cloudprober_exporter
     repository: file://vendor/cloudprober-exporter
-    version: 1.0.0
-    condition: cloudprober-exporter.enabled
+    version: 0.1.0
+    condition: cloudprober_exporter.enabled
 
   - name: netapp-exporter
+    alias: netapp_exporter
     repository: file://vendor/netapp-exporter
     version: 0.0.1
-    condition: netapp-exporter.enabled
-
-  - name: apic_exporters
-    repository: file://vendor/apic_exporters
-    version: 1.0.0
-    condition: apic_exporters.enabled
-
-  - name: snmp-exporter
-    alias: snmp_exporter
-    repository: file://vendor/snmp-exporter
-    version: 1.0.0
-    condition: snmp_exporter.enabled
-
-  - name: vcenter-service-discovery
-    repository: file://vendor/vcenter-service-discovery
-    version: 1.0.0
-    condition: vcenter-service-discovery.enabled
-
-  - name: bios-exporter
-    alias: bios_exporter
-    repository: file://vendor/bios-exporter
-    version: 1.0.0
-    condition: bios_exporter.enabled
-
-  - name: ipmi-exporter
-    repository: file://vendor/ipmi-exporter
-    version: 1.0.0
-    condition: ipmi-exporter.enabled
-  
-  - name: atlas
-    alias: atlas
-    repository: file://vendor/atlas
-    version: 1.0.0
-    condition: atlas.enabled
-
-  - name: arista-exporter
-    alias: arista_exporter
-    repository: file://vendor/arista-exporter
-    version: 0.1.0
-    condition: arista-exporter.enabled
-
-  - name: arista-service-discovery
-    alias: arista_service_discovery
-    repository: file://vendor/arista-service-discovery
-    version: 0.1.0
-    condition: arista-exporter.enabled
+    condition: netapp_exporter.enabled
 
   - name: thousandeyes-exporter
+    alias: thousandeyes_exporter
     repository: file://vendor/thousandeyes-exporter
     version: 0.1.0
-    condition: thousandeyes-exporter.enabled
+    condition: thousandeyes_exporter.enabled
+
+  - name: blackbox-exporter
+    alias: blackbox_exporter
+    repository: file://vendor/blackbox-exporter
+    version: 0.1.0
+    condition: blackbox_exporter.enabled
