update infra-monitoring alerts

--- a/system/infra-monitoring/templates/alerts.yaml
+++ b/system/infra-monitoring/templates/alerts.yaml
@@ -1,16 +1,14 @@
-{{- $values := .Values.prometheus_server }}
+{{- $values := .Values.prometheus_infra_collector }}
 {{- range $path, $bytes := .Files.Glob "vendor/*/alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: infra-{{ printf "%s" $path | replace "/" "-" }}
+  name: {{ $values.name }}-{{ printf "%s" $path | replace "/" "-" }}
   labels:
     type: alerting-rules
-    prometheus: {{ required "$values.alerts.prometheus missing" $values.alerts.prometheus }}
+    prometheus: {{ required ".Values.alerts.prometheus" .Values.alerts.prometheus }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
-
-{{- end }}
