Policy adjustments for BSO to give them the option to separate compute_admin tasks from security tasks.

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -30,6 +30,7 @@ spec:
   - cloud_compute_admin
   - securitygroup_viewer
   - securitygroup_admin
+  - compute_admin_wsg
 
   services:
   - name: neutron
