Added more precise thread checking to vcenter-exporter liveness probe

--- a/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
+++ b/openstack/infra-exporters/vcenter-exporters/templates/vcenter_datacenter_exporter_deployment.yaml
@@ -52,7 +52,7 @@ template: |
                 command: 
                   - sh 
                   - -c
-                  - '[ $(ls -l /proc/7/task | wc -l) -lt 10000 ]'
+                  - '[ $(ls -l /proc/$(ps -ef | grep cmd.py | grep -v grep | awk "{print $1}")/task | wc -l) -lt 500 ]'
               initialDelaySeconds: 45
               periodSeconds: 5
             resources:
