init infra-monitoring alerts template

--- a/system/infra-monitoring/templates/alerts.yaml
+++ b/system/infra-monitoring/templates/alerts.yaml
@@ -1,5 +1,7 @@
+{{- define "prometheus.alerts" }}
+{{/* Generate Prometheus Alert Rules */}}
 {{- $values := .Values.prometheus_infra_collector }}
-{{- range $path, $bytes := .Files.Glob "vendor/*/alerts/*.alerts" }}
+{{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
@@ -14,3 +16,4 @@ spec:
 {{ printf "%s" $bytes | indent 2 }}
 
 {{- end }}
+{{ end -}}
