--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -7,6 +7,10 @@ global:
   # cluster:
   # clusterType:
 
+  alerts:
+    enabled: true
+    prometheus: infra-collector
+
   altas:
      ironic:
        enabled: false
