--- a/system/infra-monitoring/templates/alerts.yaml
+++ b/system/infra-monitoring/templates/alerts.yaml
@@ -8,7 +8,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 
 metadata:
-  name: {{ $values.name }}-{{ printf "%s" $path | replace "/" "-" }}
+  name: {{ printf "%s" $path | replace "/" "-" }}
   labels:
     type: alerting-rules
     prometheus: {{ required "$values.prometheus missing" $values.prometheus }}
