--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -98,6 +98,8 @@ grafana:
     tls_client_auth:
       enabled: true
       secret: "kube-system/ingress-cacrt"
+    ldap:
+      enabled: true
     anonymous:
       enabled: false
 
