adding interfaces metrics

--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -12,5 +12,12 @@ modules:
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.6
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.7
       - 1.3.6.1.4.1.9.9.187.1.2.4.1.8
-      - cpmCPUTotalTable
-      - ifTable
+      - ifDescr
+      - ifOperStatus
+      - ifAdminStatus
+      - ifInOctets
+      - ifOutOctets
+      - ifInErrors
+      - ifOutErrors
+      - ifInDiscards
+      - ifOutDiscards
