add arista_sd to infra-monitoring chart

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -22,3 +22,9 @@ dependencies:
     repository: file://vendor/thousandeyes-exporter
     version: 0.1.0
     condition: thousandeyes_exporter.enabled
+
+  - name: arista-service-discovery
+    alias: arista_sd
+    repository: file://vendor/arista-service-discovery
+    version: 0.1.0
+    condition: arista_sd.enabled
