enable arista-exporter in qa-de-1

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -28,3 +28,9 @@ dependencies:
     repository: file://vendor/arista-service-discovery
     version: 0.1.0
     condition: arista_sd.enabled
+
+  - name: arista-exporter
+    alias: arista_exporter
+    repository: file://vendor/arista-exporter
+    version: 0.1.0
+    condition: arista_exporter.enabled
