--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -39,7 +39,7 @@ prometheus_infra_collector:
     name: infra-collector-additional-scrape-config
     key: scrape-config.yaml
   configMaps:
-#    - arista-sd
+    - arista-sd
 #    - atlas-targets
 
   ingress:
@@ -73,8 +73,12 @@ cloudprober_exporter:
 netapp_exporter:
   enabled: false
 
+arista_sd:
+  enabled: false
+
+arista_exporter:
+  enabled: false
+
 thousandeyes_exporter:
   enabled: false
 
-arista_sd:
-  enabled: false
