adding OID for CPU, memory, physcial values, HSRP, config changes and license monitoring

--- a/openstack/maia/files/snmp-exporter/asr04-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr04-generator.yaml
@@ -21,3 +21,24 @@ modules:
       - ifOutErrors
       - ifInDiscards
       - ifOutDiscards
+      - entSensorValue
+      - entSensorType
+      - entPhysicalName
+      - cpmCPUMemoryFree
+      - cpmCPUMemoryUsed
+      - cpmCPUTotalPhysicalIndex
+      - cpmCPUTotal5sec
+      - cHsrpGrpVirtualIpAddr
+      - cHsrpGrpStandbyState
+      - cefcFRUPowerOperStatus
+      - cefcFRUPowerAdminStatus
+      - ccmHistoryRunningLastChanged
+      - ccmHistoryRunningLastChanged
+      - ciscoImageString
+      - clagAggPortListPorts
+      - clmgmtLicenseFeatureName
+      - clmgmtLicenseValidityPeriodRemaining
+      - clmgmtLicenseType
+      - ceqfpUtilProcessingLoad
+      - ceqfpMemoryResInUse
+      - ceqfpMemoryResFree
