adding OIDs vir interface counters, physical monitoring and CPU/mem

--- a/openstack/maia/files/snmp-exporter/asr-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr-generator.yaml
@@ -16,3 +16,24 @@ modules:
       - ifDescr
       - ifAdminStatus
       - ifOperStatus
+      - ifInOctets
+      - ifOutOctets
+      - ifInErrors
+      - ifOutErrors
+      - ifInDiscards
+      - ifOutDiscards
+      - entSensorValue
+      - entSensorType
+      - entPhysicalName
+      - cpmCPUMemoryFree
+      - cpmCPUMemoryUsed
+      - cpmCPUTotalPhysicalIndex
+      - cpmCPUTotal5sec
+      - cHsrpGrpVirtualIpAddr
+      - cHsrpGrpStandbyState
+      - cefcFRUPowerOperStatus
+      - cefcFRUPowerAdminStatus
+      - ciscoImageString
+      - clmgmtLicenseFeatureName
+      - clmgmtLicenseValidityPeriodRemaining
+      - clmgmtLicenseType
