adding cef punt statistics

--- a/openstack/maia/files/snmp-exporter/asr-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/asr-generator.yaml
@@ -37,3 +37,6 @@ modules:
       - clmgmtLicenseFeatureName
       - clmgmtLicenseValidityPeriodRemaining
       - clmgmtLicenseType
+      - cefSwitchingPath
+      - cefSwitchingHCPunt
+      - cefSwitchingHCPunt2Host
