--- a/system/infra-monitoring/templates/aggregations.yaml
+++ b/system/infra-monitoring/templates/aggregations.yaml
@@ -2,7 +2,7 @@
 {{/* Generate Prometheus Aggregation Rules */}}
 {{- $values := .Values.global.aggregations }}
 {{- if $values.enabled }}
-{{- range $path, $bytes := .Files.Glob "aggregations/*.aggregations" }}
+{{- range $path, $bytes := .Files.Glob "aggregations/*.rules" }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
