init atlas service discovery

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -34,3 +34,9 @@ dependencies:
     repository: file://vendor/arista-exporter
     version: 0.1.0
     condition: arista_exporter.enabled
+
+  - name: atlas-service-discovery
+    alias: atlas_sd
+    repository: file://vendor/atlas
+    version: 0.1.0
+    condition: atlas_sd.enabled
