--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -11,6 +11,10 @@ global:
     enabled: true
     prometheus: infra-collector
 
+  aggregations:
+    enabled: true
+    prometheus: infra-collector
+
   altas:
      ironic:
        enabled: false
@@ -77,6 +81,9 @@ arista_sd:
   enabled: false
 
 arista_exporter:
+  enabled: false
+
+atlas_sd:
   enabled: false
 
 thousandeyes_exporter:
