fix infra-monitoring requirements

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -35,7 +35,7 @@ dependencies:
     version: 0.1.0
     condition: arista_exporter.enabled
 
-  - name: atlas-service-discovery
+  - name: atlas
     alias: atlas_sd
     repository: file://vendor/atlas
     version: 0.1.0
