--- a/openstack/maia/files/snmp-exporter/n7k-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/n7k-generator.yaml
@@ -2,3 +2,39 @@ modules:
   n7k:
     walk:
     - 1.3.6.1.4.1.9.9.168.1.1.9.0
+    - 1.3.6.1.2.1.10.166.11.1.2.2.1.1
+    - 1.3.6.1.2.1.10.166.11.1.3.1.1.3
+    - 1.3.6.1.2.1.15.3.1.7
+    - 1.3.6.1.4.1.9.9.187.1.2.3.1.1
+    - 1.3.6.1.4.1.9.9.187.1.2.3.1.2
+    - 1.3.6.1.4.1.9.9.187.1.2.4.1.1
+    - 1.3.6.1.4.1.9.9.187.1.2.4.1.2
+    - 1.3.6.1.4.1.9.9.187.1.2.4.1.6
+    - 1.3.6.1.4.1.9.9.187.1.2.4.1.7
+    - 1.3.6.1.4.1.9.9.187.1.2.4.1.8
+    - ifDescr
+    - ifOperStatus
+    - ifAdminStatus
+    - ifInOctets
+    - ifOutOctets
+    - ifInErrors
+    - ifOutErrors
+    - ifInDiscards
+    - ifOutDiscards
+    - entSensorValue
+    - entSensorType
+    - entPhysicalName
+    - cpmCPUMemoryFree
+    - cpmCPUMemoryUsed
+    - cpmCPUTotalPhysicalIndex
+    - cpmCPUTotal5sec
+    - cHsrpGrpVirtualIpAddr
+    - cHsrpGrpStandbyState
+    - cefcFRUPowerOperStatus
+    - cefcFRUPowerAdminStatus
+    - ccmHistoryRunningLastChanged
+    - ccmHistoryRunningLastChanged
+    - ciscoImageString
+    - clmLicenseExpiryDate
+    - clmNoOfLicenseCurrentUsages
+    - clagAggPortListInterfaceIndexList
