--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -40,3 +40,9 @@ dependencies:
     repository: file://vendor/atlas
     version: 0.1.0
     condition: atlas_sd.enabled
+
+  - name: snmp-exporter
+    alias: snmp_exporter
+    repository: file://vendor/snmp-exporter
+    version: 0.1.0
+    condition: snmp_exporter.enabled
