--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -44,7 +44,7 @@ prometheus_infra_collector:
     key: scrape-config.yaml
   configMaps:
     - arista-sd
-#    - atlas-targets
+    - atlas-sd
 
   ingress:
     enabled: true
@@ -84,6 +84,9 @@ arista_exporter:
   enabled: false
 
 atlas_sd:
+  enabled: false
+
+snmp_exporter:
   enabled: false
 
 thousandeyes_exporter:
