Castellum: add permissions for project-quota asset manager

--- a/openstack/castellum/templates/seed.yaml
+++ b/openstack/castellum/templates/seed.yaml
@@ -34,6 +34,8 @@ spec:
       - name: cloud_admin
         roles:
           - user: castellum@Default
-            role: admin
+            role: admin # to inspect Keystone projects and domains
+          - user: castellum@Default
+            role: cloud_resource_admin # to query and resize Limes quotas
           - user: castellum@Default
             role: cloud_sharedfilesystem_admin # to query and resize NFS shares
