advertise Limes as internal endpoint as well
This is easier than changing Castellum to pick-and-choose endpoint
availabilities per service.

--- a/openstack/limes/templates/seed.yaml
+++ b/openstack/limes/templates/seed.yaml
@@ -45,6 +45,10 @@ spec:
           interface: public
           enabled:   true
           url:       '{{.Values.limes.clusters.ccloud.catalog_url}}'
+        - region:    '{{.Values.global.region}}'
+          interface: internal
+          enabled:   true
+          url:       '{{.Values.limes.clusters.ccloud.catalog_url}}'
 
   domains:
     - name: Default
