increase prom-infra-collector retention time

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -15,11 +15,11 @@ global:
     enabled: true
     prometheus: infra-collector
 
-  altas:
-     ironic:
-       enabled: false
-  arista_exporter:
-    enabled: true
+#  altas:
+#     ironic:
+#       enabled: false
+#  arista_exporter:
+#    enabled: true
 
 rbac:
   create: true
@@ -36,7 +36,7 @@ prometheus_infra_collector:
   name: infra-collector
   enabled: true
 
-  retentionTime: 10m
+  retentionTime: 15m
   scrapeInterval: "60s"
 
   additionalScrapeConfigs:
