--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -46,3 +46,9 @@ dependencies:
     repository: file://vendor/snmp-exporter
     version: 0.1.0
     condition: snmp_exporter.enabled
+
+  - name: bios-exporter
+    alias: bios_exporter
+    repository: file://vendor/bios-exporter
+    version: 0.1.0
+    condition: bios_exporter.enabled
