--- a/openstack/content-repo/templates/seed.yaml
+++ b/openstack/content-repo/templates/seed.yaml
@@ -32,7 +32,7 @@ spec:
           - name: repo
             metadata:
               meta-web-listings: 'true'
-              meta-web-listings-label: repo.{{$.Values.global.region}}.{{$.Values.global.tld}}
+              meta-web-listings-label: repo.{{ .Values.global.region }}.{{ .Values.global.tld }}
               read: .r:*,.rlistings
           - name: repo_segments
             metadata:
