add image version

--- a/openstack/swift/ci/test-values.yaml
+++ b/openstack/swift/ci/test-values.yaml
@@ -2,6 +2,8 @@ global:
   tld: example.com
   region: regionOne
 
+image_version: stein-20190101094554
+
 # shared secrets and credentials
 hash_path_prefix: 123
 hash_path_suffix: 456
