--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -52,3 +52,8 @@ dependencies:
     repository: file://vendor/bios-exporter
     version: 0.1.0
     condition: bios_exporter.enabled
+
+  - name: apic_exporters
+    repository: file://vendor/apic_exporters
+    version: 1.0.0
+    condition: apic_exporters.enabled
