--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -92,6 +92,9 @@ snmp_exporter:
 bios_exporter:
   enabled: false
 
+apic_exporters:
+  enabled: false
+
 thousandeyes_exporter:
   enabled: false
 
