upload index templates for fluentd

--- a/openstack/elk/templates/fluent-etc-configmap.yaml
+++ b/openstack/elk/templates/fluent-etc-configmap.yaml
@@ -13,3 +13,5 @@ data:
 {{ include "elk/templates/etc/_fluent.conf.tpl" . | indent 4 }}
   pattern: |
 {{ include "elk/templates/etc/_pattern.tpl" . | indent 4 }}
+  logstash.json: |
+{{ include "elk/templates/etc/_logstash.json.tpl" . | indent 4 }}
