--- a/openstack/elk/templates/fluent-systemd-etc-configmap.yaml
+++ b/openstack/elk/templates/fluent-systemd-etc-configmap.yaml
@@ -12,4 +12,6 @@ metadata:
 data:
   fluent.conf: |
 {{ include "elk/templates/etc/_fluent.systemd.conf.tpl" . | indent 4 }}
+  systemd.json: |
+{{ include "elk/templates/etc/_systemd.json.tpl" . | indent 4 }}
 {{- end }}
