--- a/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-configmap.yaml
@@ -31,6 +31,7 @@ template: |
       {{- range $k, $v := .Values.drivers.nsxv3.defaults.AGENT }}
       {{ $k }} = {{ $v }}
       {{- end }}
+      enable_runtime_migration_from_dvs_driver = {{ if contains ",dvs" .Values.ml2_mechanismdrivers }}True{{ else }}False{{ end }}
 
       [NSXV3]
       # nsx-t has only admin / audit user
